--- a/index.html
+++ b/index.html
@@ -4808,6 +4808,42 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
+              src="https://image.tmdb.org/t/p/original/2dlftyPz7mTYbrsPvTogyFmYd7d.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">How to Lose a Guy in 10 Days</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 9.5</span
+                >
+              </div>
+              <span class="movie-year-text">2003</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
               src="https://image.tmdb.org/t/p/original/3S37Csd8Q4093B0WcLNL5wzevNJ.jpg"
               class="movie-poster"
             />
@@ -5472,6 +5508,42 @@
                 >
               </div>
               <span class="movie-year-text">1994</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://image.tmdb.org/t/p/original/eBU7gCjTCj9n2LTxvCSIXXOvHkD.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">The Goonies</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 9.4</span
+                >
+              </div>
+              <span class="movie-year-text">1985</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
@@ -7673,6 +7745,42 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
+              src="https://image.tmdb.org/t/p/original/qzR7m6kUhsbdid3xRK2jTXjyNmG.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Cop Land</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 9.0</span
+                >
+              </div>
+              <span class="movie-year-text">1997</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
               src="https://www.themoviedb.org/t/p/original/fZXSwgZknp81vmciTb86rw0MejV.jpg"
               class="movie-poster"
             />
@@ -8361,6 +8469,42 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
+              src="https://image.tmdb.org/t/p/original/hBItFUmCrRS1mel0TM69ymBD79k.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Another Stakeout</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 8.9</span
+                >
+              </div>
+              <span class="movie-year-text">1993</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
               src="https://image.tmdb.org/t/p/original/3b5gD5vNmf7Vafj2MN8uMA8r0qu.jpg"
               class="movie-poster"
             />
@@ -8880,6 +9024,42 @@
                 >
               </div>
               <span class="movie-year-text">2001</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://image.tmdb.org/t/p/original/mcOD6BogT9jE3Gj2htXg4QLAM8x.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Road to Perdition</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 8.5</span
+                >
+              </div>
+              <span class="movie-year-text">2002</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
@@ -13039,6 +13219,42 @@
                 >
               </div>
               <span class="movie-year-text">2014</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://image.tmdb.org/t/p/original/dpiJWb4NrWgcOg2rusuLhDM0hTm.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Eastern Promises</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> -
+                </span>
+              </div>
+              <span class="movie-year-text">2007</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
